--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.14.2"
 bevy_pancam = "0.14.0"
 bevy_egui = "0.30"
 rand = "0.8.5"
 kdtree = "0.7"
+
+[dependencies.bevy]
+version = "0.14.2"
+default-features = false
+features = [
+	"bevy_sprite",
+	"bevy_state",
+	"png",
+	"x11",
+]
